--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ ba_track_id: 8ca7d6f947da91619e860a727655334a
 
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 0              # 相同标签数量大于这个数，才会出现在首页
+featured-condition-size: 2              # 相同标签数量大于这个数，才会出现在首页
 
 
 
@@ -99,8 +99,8 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "简书",
+        href: "http://www.jianshu.com"
     },{
         title: "Apple",
         href: "https://apple.com"
