--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Normansluo Blog
-SEOTitle: 骆孟思的博客 | Normansluo Blog
+SEOTitle: 桐昌 | Normansluo Bl
 header-img: img/post-bg-desk.jpg
 email: menciusluo@gmail.com
 description: "Good study, day day up!"
